--- a/Pagina_Web/styles/styles.css
+++ b/Pagina_Web/styles/styles.css
@@ -11,6 +11,11 @@ div{
     display: flex;
     flex-direction: row;
 }
+.SobreMi{
+    color:white;
+    background-color: green;
+    padding: 20px;
+}
 
 h2{
     color: white;
